# memory_manager

./: CMakeLists.txt  memoryManager.cpp
goodies/: README.md
goodies/test/: CMakeLists.txt  memoryManagerTests.cpp
